[tool.poetry]
name = "gp_nix-python_template"
version = "0.1.0"
description = ""
authors = ["Noru <akang8150@naver.com>"]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
selenium = "^4.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
